--- a/styles.css
+++ b/styles.css
@@ -66,19 +66,19 @@ body{
     margin-left: 3.5vw;
     margin-right: 3.5vw;
     margin-bottom: 10vh;
-    font-size: 1.4vw;
+    font-size: 2.65vh;
 }
 
 .trim-marks{
     display: flex;
-    height: 1.5vw;
+    height: 3vh;
     width: 98%;
     justify-content: space-between;
     margin: 0 auto;
 }
 
 .box{
-    width: 1.5vw;
+    width: 3vh;
     display: flex;
 }
 
@@ -113,13 +113,13 @@ body{
 }
 
 .name{
-    font-size: 10.5vw;
+    font-size: 10.5vh;
     line-height: 1;
     text-transform: uppercase;
 }
 
 .subname{
-    font-size: 1.4vw;
+    font-size: 2.65vh;
 }
 
 .caption{
