--- a/styles.css
+++ b/styles.css
@@ -297,12 +297,17 @@ text-transform: uppercase;
     width: 79.8vw;
 }
 
-#key{
+.key{
   margin: 0.5% 1% 0.5% 1%;
-  margin-top: 2.5vw;
-  padding: .05% .35% .05% .35%;;
+  margin-top: 3vw;
   display: inline-flex;
-  font-size: 1vw;
+  font-size: .8vw;
+  width: 98vw;
+  justify-content: space-between;
+}
+
+#key{
+  padding: .05% .35% .05% .35%;
   border: .2px solid var(--color);
 }
 
@@ -425,7 +430,7 @@ margin-bottom: 2vw;
 .copyright{
   margin-top: 10vw;
   margin-bottom: 0vw;
-  font-size: 1vw;
+  font-size: .8vw;
   margin-left: 1.5vw; 
   text-transform: uppercase;
 }
@@ -687,7 +692,7 @@ video{
     margin-top: -2.5vw;
   }
 
-  #key{
+  .key{
     margin-top: 0;
   }
 }
