--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,8 @@
 .click{
   text-decoration: underline;
   cursor: pointer;
+  /* background-color: var(--color);
+  color: var(--black); */
 }
 
 #drithi{
@@ -137,39 +139,39 @@ text-transform: uppercase;
   }
 
   .xaxis{
-    font-size: 1.25vw;
+    font-size: 1.1vw;
     position: relative;
     display: flex;
     margin: 0 auto;
     justify-content: space-between;
     width: 91.5vw;
-    top:22.3vw;
+    top:22.15vw;
   }
   
   #print{
-    width: 6%;
+    width: 6.05%;
     text-align: right;
   }
 
   #digital{
-    width: 6%;
+    width: 6.05%;
     text-align: left;
   }
 
   .yaxis{
     margin: 0 auto;
-    font-size: 1.25vw;
+    font-size: 1.1vw;
     position: absolute;
     justify-content: center;
     text-align: center;
     background-color: black;
-    height: 48.5vw;
+    height: 48.2vw;
   }
 
   #branding{
     position:absolute;
     width: 100vw;
-    top:-1vw;
+    top:-1.1vw;
   }
 
   #personal{
@@ -195,13 +197,16 @@ text-transform: uppercase;
     grid-template-rows: repeat(52, .8vw); /* 50 rows, each 20px high */
     gap: 0px; /* Space between grid items */
     margin-top: .5vw;
+    opacity: 0;
     border: 1px solid var(--color);
+    animation: opacity .8s forwards ease-in;
+    animation-delay: 2.75s;
 }
 
 .grid-line {
     width: .8vw;
     height: .8vw;
-    border: .1px dashed var(--color);
+    border: .1px dashed #1F80A6;
     box-sizing: border-box;
 }
 
@@ -231,56 +236,56 @@ text-transform: uppercase;
 #pointA-point{
   opacity:0;
   animation: opacity forwards 1s ease-in;
-  animation-delay: 1.5s;
+  animation-delay: 3s;
 }
 
 #pointB-point{
   opacity:0;
   animation: opacity forwards 1s ease-in;
-  animation-delay: 5.5s;
+  animation-delay: 7s;
 }
 
 
 #pointC-point{
   opacity:0;
   animation: opacity forwards 1s ease-in;
-  animation-delay: 4s;
+  animation-delay: 5.5s;
 }
 
 #pointD-point{
   opacity:0;
   animation: opacity forwards 1s ease-in;
-  animation-delay: 3s;
+  animation-delay: 4.5s;
 }
 
 #pointE-point{
   opacity:0;
   animation: opacity forwards 1s ease-in;
-  animation-delay: 2.5s;
+  animation-delay: 4s;
 }
 
 #pointF-point{
   opacity:0;
   animation: opacity forwards 1s ease-in;
-  animation-delay: 2s;
+  animation-delay: 3.5s;
 }
 
 #pointG-point{
   opacity:0;
   animation: opacity forwards 1s ease-in;
-  animation-delay: 5s;
+  animation-delay: 6.5s;
 }
 
 #pointH-point{
   opacity:0;
   animation: opacity forwards 1s ease-in;
-  animation-delay: 3.5s;
+  animation-delay: 5s;
 }
 
 #pointI-point{
   opacity:0;
   animation: opacity forwards 1s ease-in;
-  animation-delay: 4.5s;
+  animation-delay: 6s;
 }
 
 .arrows{
@@ -299,11 +304,32 @@ text-transform: uppercase;
 }
 
 #one{
-    height: 44.6vw;
+    height: 0vw;
+    animation: growHeight 2s forwards;
+    animation-delay: 1s;
+}
+@keyframes growHeight {
+  from {
+      height: 0;
+  }
+  to {
+      height: 44.6vw;
+  }
 }
 
 #two{
-    width: 79.8vw;
+  width: 0vw;
+  animation: growWidth 2s forwards;
+  animation-delay: 1s;
+}
+
+@keyframes growWidth {
+  from {
+      width: 0;
+  }
+  to {
+      width: 79.8vw;
+  }
 }
 
 .key{
