--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
   
   html{
     box-sizing: border-box;
-    overflow-x: hidden; 
+    /* overflow-x: hidden;  */
     height: auto;
     /* cursor: url('cursor.svg') 5 5,auto; */
   }
@@ -40,7 +40,7 @@
     font-family: 'PP Rader', sans-serif;
     height: 100vh;
     background-color: var(--background);
-    /* overflow-y: hidden!important; */
+    overflow-y: hidden!important;
   }
   #home{
     transition: 1s;
@@ -380,7 +380,7 @@ margin-top: 3vw;
 z-index: 50;
 width: 100vw;
 /* min-height: 100vh; */
-display:none;
+display:block;
 background-color: var(--background);
 margin-bottom: 3vw;
 padding-bottom: 1vw;
