--- a/styles.css
+++ b/styles.css
@@ -914,7 +914,7 @@ video{
     }
   
     #personal{
-      bottom: -2vw;
+      bottom: 0vw;
       width: 100vw;
     }
   
@@ -954,7 +954,7 @@ video{
     }
   
     #personal{
-      bottom: 10vw;
+      bottom: 7.5vw;
     }
 
     .key {
@@ -1133,5 +1133,9 @@ video{
 
 .linkcontainer{
   margin-top: 2vw;
+}
+
+body{
+  overflow-y:auto;
 }
 }
