--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
   :root {
     --color: #00aadf;
     --background: rgb(197, 197, 197);
-    --black: #1f1f1f;
+    --black: #151515;
   }
   
   html{
