--- a/styles.css
+++ b/styles.css
@@ -13,9 +13,9 @@
   }
 
   :root {
-    --color: #00aadf;
-    --background: rgb(197, 197, 197);
-    --black: #151515;
+    --color: #ed26ff;
+    --background: #404040;
+    --black: #D4D4D4;
   }
   
   html{
@@ -28,11 +28,13 @@
 
   ::-webkit-scrollbar {
    width: 5px;
+   background-color: var(--black);
   }
 
   ::-webkit-scrollbar-track {
     /* box-shadow: inset 0 0 5px grey;  */
     border-radius: 10px;
+    background-color: var(--black);
   }
    
   /* Handle */
@@ -40,25 +42,31 @@
     background: var(--color); 
     border-radius: 10px;
   }
+
+  /* .click, span{
+    border-radius: .35vw;;
+  } */
+  
   
   body{
     margin: 0;
-    color: var(--color);
+    color: var(--black);
     width: 100vw;
     font-family: 'PP Rader', 'Helvetica', sans-serif;
     /* font-family: "roc-grotesk", sans-serif;
     font-weight: 700;
     font-style: normal; */
     height: 100vh;
-    background-color: var(--background);
+    background-color: var(--black);
     overflow-y: hidden!important;
   }
+  
   #home{
     transition: 1s;
     height: 100vh;
     z-index: -1;
     animation: opacity 1s forwards ease-in;
-    background-color: var(--black);
+    background-color: var(--background);;
   }
 
   .blur {
@@ -73,7 +81,7 @@
     position: fixed!important;
     width: 45vw;
     height: 45vw;
-    background-color: var(--background);
+    background-color: var(--black);
     margin: auto;
     top: 50vh;
     transform: translateY(-50%);
@@ -85,14 +93,16 @@
     z-index: 10;
     opacity: 0;
     display: none;
+    color: var(--color);
     transition: .5s!important;
 }
 
 .click{
-  text-decoration: underline;
+  /* text-decoration: underline; */
   cursor: pointer;
-  /* background-color: var(--color);
-  color: var(--black); */
+  padding: 0;;
+  background-color: var(--color);
+  color: var(--background);
 }
 
 #drithi{
@@ -122,24 +132,30 @@ margin-top: 3vw;
 
 .linkpoints {
   display: inline-block; /* Make the point inline with text */
-  width: 1.1vw;
-  height: 1.1vw;
+  width: 1.2vw;
+  height: 1.2vw;
   background-color: var(--color);
   cursor: pointer;
 }
 
   .header{
-    font-size: 3.75vw;
+    font-size: 3.25vw;
     display: flex;
     line-height:1;
     justify-content: space-between;
-    padding: 0.4% 1% 1% 1%;
+    padding: 1% 1% 1% 1%;
     margin-bottom: 2.2vw;
-    border-bottom: 1px dotted var(--color);
+    border-bottom: 1.5px dotted var(--black);
+    line-height: 1;
+  }
+
+  .header span{
+    background-color: var(--color);
+    color: var(--background); 
   }
 
   #headerone{
-    background-color: var(--black); 
+    background-color: var(--background); 
   }
 
   a{
@@ -193,7 +209,7 @@ margin-top: 3vw;
 
 .label{
     background-color: var(--color);
-    color: var(--black);
+    color: var(--background);
     padding-left: .1vw;
     padding-right: .1vw;
   }
@@ -209,22 +225,26 @@ margin-top: 3vw;
     gap: 0px; /* Space between grid items */
     margin-top: .5vw;
     opacity: 0;
-    border: 1px solid var(--color);
+    border: 1px solid var(--black);
     animation: opacity .5s forwards ease-in;
     animation-delay: 2s;
     z-index: 9;
 }
 
+#key2{
+ 
+}
+
 .grid-line {
     width: .8vw;
     height: .8vw;
-    border: .1px dashed #1F80A6;
+    border: .1px dashed #8b8b8b;
     box-sizing: border-box;
 }
 .point {
     position: absolute;
-    width: 1.1vw;
-    height: 1.1vw;
+    width: 1.2vw;
+    height: 1.2vw;
     background-color: var(--color);
     cursor: pointer;
     /* transform: translate(-50%, -50%); */
@@ -235,17 +255,18 @@ margin-top: 3vw;
   display: inline-flex;
   transform: translate(-50%, 0); /* Center text horizontally */
   line-height: 1;
-  font-size: 1.5vw; 
+  font-size: 1.2vw; 
   text-transform: uppercase;
   visibility: hidden;
   opacity:0;
   transition: 1s;
-  white-space: nowrap; /* Prevent text from wrapping */
-  background-color: rgba(31, 31, 31, 0.7);
-  width: 100%;
+  white-space: nowrap;
+  color: var(--black);
   justify-content: center;
   text-align: center;
   margin-left: 0.3vw;
+  padding: .05vh .15vh .5vh .15vh;
+  /* background-color: rgba(255, 0, 255, .75); */
 }
 
 #pointA-point{
@@ -316,7 +337,7 @@ margin-top: 3vw;
 
 #arrow2{
     position: absolute;
-    transform: translateY(20.25vw);
+    transform: translateY(20.68vw);
     z-index: 16;
 }
 
@@ -380,11 +401,12 @@ margin-top: 3vw;
   font-size: .8vw;
   width: 98vw;
   justify-content: space-between;
+  color: var(--color)
 }
 
 #key{
   padding: .05% .35% .05% .35%;
-  border: .2px solid var(--color);
+  border: .2px solid var(--black);
 }
 
 #projects-section{
@@ -392,9 +414,10 @@ z-index: 50;
 width: 100vw;
 /* min-height: 100vh; */
 display:block;
-background-color: var(--background);
+background-color: var(--black);
 margin-bottom: 1vw;
 padding-bottom: 1vw;
+color: var(--background);
 }
 
 #projects{
@@ -407,13 +430,16 @@ padding-bottom: 1vw;
 
 #allnav a{
   text-decoration: none;
+  background-color: var(--color);
 }
+
 
 #about2 {
   position: fixed!important;
   width: 45vw;
   height: 45vw;
-  background-color: var(--black);
+  background-color: var(--background);
+  color: var(--color);
   margin: auto;
   top: 50vh;
   transform: translateY(-50%);
@@ -428,20 +454,36 @@ padding-bottom: 1vw;
   transition: .5s!important;
 }
 
+#about2 .linkpoints{
+  background-color: var(--color);
+}
+
+#about2 a{
+  color: var(--color);
+}
+
 #headertwo{
   margin-bottom:0;
   display: flex;
+  background-color: rgba(212, 212, 212, 0.7);
+  border-bottom: 1.5px dotted var(--background);
 }
+
+
+#headertwo a{
+  color: var(--background);
+}
+
 
 #projnav{
   display: inline-flex;
   margin: 0 auto;
-  margin-top: -.5vw;
+  margin-top: -.5vw; 
 }
 
 .projpoint {
-  width: 1.1vw;
-  height: 1.1vw;
+  width: 1.2vw;
+  height: 1.2vw;
   background-color: var(--color);
   cursor: pointer;
   display: inline-flex;
@@ -474,16 +516,33 @@ padding-bottom: 1vw;
   padding-top: 10vw;
 } */
 
-.box a{
+.info a{
+  transition: .5s;
+  color: var(--color);
+  background-color: var(--color);
+  color: var(--background);
+}
+
+.info a:hover{
+  filter: blur(4px);
+  cursor: alias;
+}
+
+
+.first, .background{
   transition: .5s;
 }
 
-.box a:hover{
-  background-color: var(--color);
-  color: var(--background);
-  filter: blur(4px);
-  cursor: alias
+.first:hover{
+  transform: scale(1.05);
+  cursor: alias;
 }
+
+.background:hover{
+  transform: scale(1.05);
+  cursor: alias;
+}
+
 
 .title{
   font-size: 2vw; 
@@ -493,11 +552,26 @@ padding-bottom: 1vw;
   align-items: center;
 }
 
+.title-text{
+  background-color: var(--color);
+}
+.title-date{
+  /* border: 1px solid var(--color); */
+  background-color: var(--background);
+  color: var(--black);
+  padding-left: .05vw;
+  padding-right: .05vw;
+}
+
+.date{
+  color: var(--black);
+}
+
 .titlepoint {
   display: inline-flex;
-  width: 1.1vw;
-  height: 1.1vw;
-  margin-right: .5vw;
+  width: 1.2vw;
+  height: 1.2vw;
+  margin-right: .3vw;
   background-color: var(--color);
   cursor: pointer;
   /* transform: translate(-50%, -50%); */
@@ -591,7 +665,7 @@ padding-bottom: 1vw;
 }
 
 .first{
-  margin-top:0;
+  margin-top:.5vw;
   width: 72vw;
 }
 
@@ -677,6 +751,7 @@ padding-bottom: 1vw;
   margin-bottom: 0;
   padding-bottom: .5vw;
   transition: .5s;
+  padding-top:.5vw;
 }
 
 #chamberlain-web{
@@ -807,26 +882,23 @@ video{
 }
 
 #click1:hover{
-  color: var(--background);
+  /* color: var(--background); */
   filter:blur(7px);
 }
 #nav:hover{
-  color: var(--background);
+  /* color: var(--background); */
   filter:blur(7px);
 }
 #click2:hover{
-  color: var(--black);
+  /* color: var(--black); */
   filter:blur(7px);
 }
 #allnav >a:hover{
-  color: var(--black);
+  /* color: var(--black); */
   filter:blur(7px);
 }
 
-/* .count{
-  background-color: var(--color)!important;
-  color: var(--black)!important;
-} */
+
 
 @keyframes opacity {
   from {
@@ -883,16 +955,17 @@ video{
   #welcome{
     display: block;
     position: absolute;
-    border-bottom: 1px dotted var(--color);
+    border-bottom: 1px dotted var(--background);
     top: 1vw;
     width: 100vw;
     padding-top: 1.5vw;
     padding-bottom: 3.5vw;
   }
 
+
   #nav{
    display: block;
-   border-top: 1px dotted var(--color);
+   border-top: 1px dotted var(--background);
    position: absolute;
    bottom:3.5vw;
    width: 100vw;
@@ -918,13 +991,13 @@ video{
     gap: 0px; /* Space between grid items */
     margin-top: 0vw;
     opacity: 0;
-    border: 1px solid var(--color);
+    border: .5px solid var(--black);
 }
 
     .grid-line {
       width: 1.65vw;
       height: 1.65vw;
-      border: .5px solid #1F80A6;
+      border: .5px dashed #8b8b8b;
     }
     .point {
       width: 3.75vw;
@@ -1013,7 +1086,7 @@ video{
       font-size: 2vw;
       margin: 0.5% auto;
   }
-
+  
   .point-text{
     font-size: 2vw;
     margin-top: 3vw;
@@ -1029,7 +1102,6 @@ video{
     padding-right:.75vw;
     font-size: 7vw;
     padding-bottom: 4vw;
-    border-bottom: 1px dotted var(--color);
   }
 
   #projnav{
@@ -1053,7 +1125,7 @@ video{
   }
 
   .fullwidth{
-    width: 85.5vw;
+    width: 86vw;
   }
 
   .titlepoint{
@@ -1061,6 +1133,7 @@ video{
     height: 3.5vw;
     margin-right: 1vw;
     display: block;
+    margin-bottom: 1.5vw;
   }
 
   .title{
@@ -1069,12 +1142,13 @@ video{
     display: block;
     text-align: left;
     margin-bottom: 1vw;
+    margin-left: 1vw;
   }
 
   .subtitle{
     font-size: 3vw;
     margin-bottom: 2vw;
-    margin-left:-1vw;
+    margin-left:-.25vw;
   }
 
   .caption{
