--- a/styles.css
+++ b/styles.css
@@ -692,7 +692,7 @@ color: var(--background);
   width: 98%;
 } */
 
-.twocol, .threecol, .threecol2, .threecol3, .twocol2, .twocol3, .twocol4, .sixcol{
+.twocol, .twocolweb, .threecol, .threecol2, .threecol3, .twocol2, .twocol3, .twocol4, .sixcol{
   width: 72vw;
   display: flex;
   justify-content: space-between;
@@ -720,6 +720,10 @@ color: var(--background);
 .shirt img{
   height: 24vw;
   width: auto;
+}
+
+.twocolweb img{
+  width: 36.1vw;
 }
 
 #blum-code{
@@ -1184,7 +1188,7 @@ video{
     font-size: 2.5vw;
   }
 
-  .twocol, .threecol, .threecol2, .threecol3, .twocol2, .twocol3, .twocol4, .sixcol, video{
+  .twocol, .twocolweb .threecol, .threecol2, .threecol3, .twocol2, .twocol3, .twocol4, .sixcol, video{
     width: 85.5vw;
   }
 
