--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
   :root {
     --color: #ed26ff;
     --background: #404040;
-    --black: #D4D4D4;
+    --black: #c8c8c8;
   }
   
   html{
@@ -27,6 +27,7 @@
   }
 
   ::-webkit-scrollbar {
+    display: none;
    width: 5px;
    background-color: var(--black);
   }
@@ -64,7 +65,8 @@
   #home{
     transition: 1s;
     height: 100vh;
-    z-index: -1;
+    z-index: 100;
+    width: 100vw;
     animation: opacity 1s forwards ease-in;
     background-color: var(--background);;
   }
@@ -145,7 +147,7 @@ margin-top: 3vw;
     justify-content: space-between;
     padding: 1% 1% 1% 1%;
     margin-bottom: 2.2vw;
-    border-bottom: 1.5px dotted var(--black);
+    /* border-bottom: 1.5px dotted var(--black); */
     line-height: 1;
   }
 
@@ -229,7 +231,7 @@ margin-top: 3vw;
     gap: 0px; /* Space between grid items */
     margin-top: .5vw;
     opacity: 0;
-    border: 1px solid var(--black);
+    border: .5px solid var(--black);
     animation: opacity .5s forwards ease-in;
     animation-delay: 2s;
     z-index: 9;
@@ -415,8 +417,8 @@ margin-top: 3vw;
 }
 
 #projects-section{
-z-index: 50;
-width: 100vw;
+z-index: 1000;
+/* width: 100vw; */
 /* min-height: 100vh; */
 display:block;
 background-color: var(--black);
@@ -431,7 +433,41 @@ color: var(--background);
 
 #allprojects{
 /* padding: 1% 1.5% 1% 1.5%; */
+/* padding: 1% 1% 1% 1%; */
+padding-top:0vw;
+padding-bottom: 1vw;
+overflow-x: scroll; 
+overflow-y: scroll;
+display: flex;
+flex-direction: row;
+/* gap: 7vw; */
+width: auto;
 }
+
+.box{
+  padding:0;
+  margin: 0 auto;
+  display: inline-block;
+  min-height: auto;
+  justify-content: center;
+  padding-bottom: 3vw;
+  width: 87vw;
+  padding-left: 3.25vw;
+  padding-right: 3.25vw;
+  padding-top: 2vw;
+}
+
+.subbox{
+  line-height: 1;
+  border: 1.5px dotted var(--background);
+  padding-top: .75vw;
+  padding-bottom: .75vw;
+  padding-left: .75vw;
+  padding-right: .75vw;
+  box-sizing: border-box;
+  width: 87vw;
+}
+
 
 #allnav a{
   text-decoration: none;
@@ -470,56 +506,153 @@ color: var(--background);
 #headertwo{
   margin-bottom:0;
   display: flex;
-  background-color: rgba(212, 212, 212, 0.7);
-  border-bottom: 1.5px dotted var(--background);
+  /* background-color: rgba(212, 212, 212, 0.7); */
+  /* border-bottom: 1.5px dotted var(--background); */
+  background: rgb(200,200,200);
+  background: linear-gradient(180deg, rgba(200,200,200,1) 0%, rgba(200,200,200,.75) 20%, rgba(200,200,200,0) 100%);
+  padding-bottom: 1vw;
+  cursor: auto;
 }
 
 
 #headertwo a{
+  z-index: 2000;
   color: var(--background);
 }
 
+.arrowsholder {
+  height: 100%;
+  display: flex;
+  position: fixed;
+  visibility: hidden;
+  opacity: 0;
+  transition: .5s;
+  bottom: .75%;
+  right: 0;
+  justify-content: flex-end;
+  align-items: flex-end;
+  pointer-events: none;
+  margin: 1%;
+  z-index:50;
+}
+
+#arrowheader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: auto;
+  pointer-events: auto;
+  position: relative;
+}
+
+.arrow-container {
+  position: relative;
+  width: 3vw; /* Adjust the width as needed */
+  height: 3vw; /* Adjust the height as needed */
+  display: flex;
+  z-index: 5;
+}
+
+
+.arrow-container2 {
+  position: absolute;
+  width: 3vw; /* Adjust the width as needed */
+  height: 3vw; /* Adjust the height as needed */
+  display: flex;
+  background-color: var(--color);
+  filter: blur(3px);
+  z-index: 4;
+  opacity: .9;
+}
+
+
+.arrow-container img{
+  cursor: pointer;
+  transition: .3s;
+}
+
+.arrow-container img:hover{
+  animation: opacityblur forwards .25s ease-out alternate;
+}
+
+.arrowsvert {
+  width: 1vw;
+  position: absolute;
+  display: flex;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.arrowsvert:first-child {
+  top: 0;
+}
+
+.arrowsvert:last-child {
+  bottom: 0;
+}
+
+.leftright{ 
+  display: flex;
+  width: 3vw;
+  justify-content: space-between;
+}
+
+.arrowshor {
+  display: flex;
+  height: 1vw;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.arrowshor:first-of-type {
+  left: 0;
+}
+
+.arrowshor:last-of-type {
+  right: 0;
+}
+
+#up:hover{
+  transform: translateY(-.75vw);
+}
+
+#down:hover{
+  transform: translateY(.75vw);
+}
+
+
+#left:hover{
+  transform: translateX(-.75vw);
+}
+
+#right:hover{
+  transform: translateX(.75vw);
+}
 
 #projnav{
   display: inline-flex;
   margin: 0 auto;
-  margin-top: -.5vw; 
+  margin-top: 0.25vw; 
 }
 
 .projpoint {
-  width: 1.2vw;
-  height: 1.2vw;
+  width: .85vw;
+  height: .85vw;
   background-color: var(--color);
   cursor: pointer;
   display: inline-flex;
   margin-left: 3vw;
   margin-right: 3vw;
   transition: .5s;
+  filter: blur(3px);
 }
 
-.projpointblur {
-  filter: blur(3.5px);
+.scale-up{
+  width: 1.2vw;
+  height: 1.2vw;
+  filter: blur(0px); 
 }
-
-
-.projpointremove {
-  filter: blur(0px);
-}
-
-.box{
-  padding:0;
-  padding-top: 6vw;
-  width: 100%;
-  margin: 0 auto;
-  display: block;
-  width:  76.8vw;
-  justify-content: center;
-  padding-bottom: 4vw;
-}
-
-/* .box:first-child {
-  padding-top: 10vw;
-} */
 
 .info a{
   transition: .5s;
@@ -542,7 +675,7 @@ color: var(--background);
 }
 
 .first:hover{
-  transform: scale(1.05);
+  transform: scale(1.02);
   animation: blur .5s forwards ease-out;
 }
 
@@ -600,17 +733,6 @@ color: var(--background);
   /* position: relative; */
 }
 
-.subbox{
-  line-height: 1;
-  border: 1.5px dotted var(--color);
-  padding-top: .75vw;
-  width: 76.8;
-  padding-bottom: .75vw;
-  padding-left: .75vw;
-  padding-right: .75vw;
-  box-sizing: border-box;
-}
-
 .expand{
   font-size: 3vw;
   display: block;
@@ -628,6 +750,7 @@ color: var(--background);
   text-transform: uppercase;
   font-size: 1.5vw;
   margin-bottom: 1vw;
+  margin-top: 1.5vw;
 }
 
 .subcaption{
@@ -655,39 +778,52 @@ color: var(--background);
 }
 
 .copyright{
-  margin-top: 10vw;
-  margin-bottom:0vw;
+  display: block;
+  margin-top: 2vw;
+  margin-bottom:1vw;
   font-size: .8vw;
   margin-left: 1.5vw; 
   text-transform: uppercase;
   text-align: center;
 }
 
+#copy{
+  background-color: var(--color);
+}
+
 .info{
-  display: none;
-  opacity: 0;
+  /* display: none; */
+  /* opacity: 0; */
   width: 50%;
   transition: 1s;
 }
 
-.fullwidth{
-  width: 72vw;
-  margin-top: 1.25vw;
+.reveal-info{
+  display: block;
+  opacity: 1;
 }
 
 .first{
   margin-top:.5vw;
-  width: 72vw;
+  width: 98%;
+}
+.fullwidth{
+  width: 82vw;
+  margin-top: 1.25vw;
 }
 
+.homegif{
+  width: 83vw!important;
+  margin-left: -.5vw;
+}
 
 #blumenhaus-web{
-  width:  72vw;
+  width: 82vw;
 }
 
 .logo{
   display: flex;
-  width: 72vw;
+  width: 82vw;
   justify-content: right;
   position: relative;
   margin-top: -10vw;
@@ -703,14 +839,14 @@ color: var(--background);
 } */
 
 .twocol, .twocolweb, .threecol, .threecol2, .threecol3, .twocol2, .twocol3, .twocol4, .sixcol{
-  width: 72vw;
+  width: 82vw;
   display: flex;
   justify-content: space-between;
   margin-top: 1.5vw;
 }
 
 .twocol img{
-  width: 49%;
+  width: 49.25%;
   height: 100%;
 }
 
@@ -719,21 +855,21 @@ color: var(--background);
 }
 
 .threecol2 img{
-  height: 43.5vw;
+  height: 50vw;
 }
 
 .sixcol img{
-  width: 11vw;
+  width: 12.75vw;
   border-radius: 10px;
 }
 
 .shirt img{
-  height: 24vw;
+  height: 27.5vw;
   width: auto;
 }
 
 .twocolweb img{
-  width: 36.1vw;
+  width: 40.5vw;
 }
 
 #blum-code{
@@ -746,7 +882,7 @@ color: var(--background);
 
 .twocol2 img{
   /* width: 30%; */
-  height: 43vw;
+  height: 50vw;
   margin-right: 4vw;
 }
 
@@ -766,7 +902,7 @@ color: var(--background);
   margin-bottom: 0;
   padding-bottom: .5vw;
   transition: .5s;
-  padding-top:.5vw;
+  /* padding-top:.5vw; */
 }
 
 #chamberlain-web{
@@ -774,37 +910,37 @@ color: var(--background);
 }
 
 .twocol3 img{
-  height: 20vw;
+  height: 22.75vw;
   width: auto;
 }
 
 .five img{
-  height: 24vw;
+  height: 27.5vw;
   width: auto;
 }
 
 .six img{
-  height: 29vw;
+  height: 33.5vw;
   width: auto;
 }
 
 .seven img{
-  height: 34.3vw;
+  height: 39vw;
   width: auto;
 }
 
 .eight img{
-  height: 26vw;
+  height: 29.75vw;
   width: auto;
 }
 
 .nine img{
-  height: 37vw;
+  height: 42.5vw;
   width: auto;
 }
 
 .ten img{
-  height: 32.5vw;
+  height: 37.2vw;
   width: auto;
 }
 
@@ -847,11 +983,11 @@ color: var(--background);
 .carousel::before {
   left: 0%;
   z-index:2;
-  cursor: url('arrowleft.svg'), auto;
+  cursor: url('arrowleftnav.svg'), auto;
 }
 .carousel::after {
   right: 0;
-  cursor: url('arrowright.svg'), auto;
+  cursor: url('arrowrightnav.svg'), auto;
 }
 
 .last{
@@ -860,7 +996,7 @@ color: var(--background);
 
 video{
   margin-top: 1.5vw;
-  width: 72vw;
+  width: 82vw;
   height: auto;
 }
 
@@ -884,9 +1020,6 @@ video{
   filter: blur(5px);
 }
 
-#home-web{
-  margin-bottom:1vw;
-}
 
 #home-book button{
   margin-top: 0vw;
@@ -913,7 +1046,17 @@ video{
   filter:blur(7px);
 }
 
-
+.footer{
+width: 100%;
+height: 3.75vw;
+display: block;
+position: fixed;
+background: rgb(200,200,200);
+background: linear-gradient(180deg, rgba(200,200,200,0) 0%, rgba(200,200,200,.5) 90%, rgba(200,200,200,1) 100%);
+bottom:0;
+transition: .5s;
+visibility: hidden;
+}
 
 @keyframes opacity {
   from {
@@ -1110,7 +1253,7 @@ video{
       left: 50%;
       transform: translateX(-50%);
       width: 95vw;
-      font-size: 2vw;
+      font-size: 2.5vw;
       margin: 0.5% auto;
   }
   
@@ -1137,26 +1280,35 @@ video{
   }
   
   #allprojects{
-    padding-top: 10vw;
-    padding-bottom: 8vw;
+    padding-bottom: 3vw;
+    padding-left: 2vw;
+    padding-right: 2vw;
+    overflow-x: scroll;
   }
 
 
   .box{
-    margin-top: 10vw;
+    margin-top: 0vw;
+    padding-top:19vw;
     width: 91vw;
     margin-bottom: 10vw;
+    transition:.5s;
   }
+
+  .box * {
+    transition: .5s; 
+}
 
   .subbox{
     border: 1px dotted var(--background);
+    transition: .5s;
   }
   .first{
     width: 98%;
   }
 
   .fullwidth{
-    width: 86vw;
+    width: 82.25vw;
   }
 
   .titlepoint{
@@ -1177,38 +1329,38 @@ video{
   }
 
   .subtitle{
-    font-size: 3vw;
+    font-size: 4vw;
     margin-bottom: 2vw;
     margin-left:-.25vw;
   }
 
   .caption{
-    font-size: 3.5vw;
+    font-size:4vw;
     margin-bottom: 2vw;
   }
 
-  .expand, .close{
+  /* .expand, .close{
     font-size: 3vw;
     margin-left: 0;  
-  }
+  } */
 
   .subcaption{
     margin-top: 0vw;
     margin-bottom: 2vw;
-    font-size: 2.5vw;
+    font-size: 3.5vw;
   }
 
   .twocol, .twocolweb .threecol, .threecol2, .threecol3, .twocol2, .twocol3, .twocol4, .sixcol, video{
-    width: 85.5vw;
+    width: 82.25vw;
   }
 
   .shirt img{
     width: auto;
-    height: 28.5vw;
+    height: 27.25vw;
   }
 
   .logo{
-    width: 84vw;
+    width: 80vw;
   }
 
   .twocol2 img{
@@ -1218,7 +1370,7 @@ video{
 
   .twocol3 img{
     width: auto;
-    height: 23vw;
+    height: 22.5vw;
   }
 
   .twocol4 img{
@@ -1231,12 +1383,12 @@ video{
 
   .five img{
     width: auto;
-    height: 28vw;
+    height: 27vw;
   }
 
   .six img{
     width: auto;
-    height: 34.5vw; 
+    height: 33.5vw; 
   }
 
   .threecol2 img{
@@ -1244,10 +1396,10 @@ video{
     width: auto;
   }
   .seven img{
-    height: 40vw;
+    height: 39vw;
   }
   .eight img{
-    height: 30.5vw;
+    height: 29.5vw;
   }
   .nine img{
     height: 43vw;
@@ -1258,8 +1410,8 @@ video{
 
   .copyright{
     padding-top:16vw;
-    /* padding-bottom: 2vw; */
-    font-size: 2vw;
+    padding-bottom: 3vw;
+    font-size: 2.5vw;
     text-align: center;
   }
 
@@ -1275,7 +1427,7 @@ video{
 }
 
 #main-text, .linkcontainer{
-  font-size: 3.5vw;
+  font-size: 4vw;
 }
 
 .linkpoints {
@@ -1284,10 +1436,45 @@ video{
 }
 
 .linkcontainer{
-  margin-top: 2vw;
+  margin-top: -3vw;
 }
 
 body{
   overflow-y: scroll!important;
+}
+
+.arrowsholder {
+  opacity: 0;
+  transition: .5s;
+  top: .5%;
+  right: 0vw;
+  left: 40vw;
+  justify-content: center;
+  align-items: flex-start;
+  margin: 1%;
+  z-index: 500;
+}
+
+.arrow-container{
+  width: 10vw; /* Adjust the width as needed */
+  height: 10vw; /* Adjust the height as needed */
+}
+
+.arrow-container2 {
+  width: 8vw; /* Adjust the width as needed */
+  height: 8vw; /* Adjust the height as needed */
+  filter: blur(1.5px);
+}
+
+.arrowsvert{
+  width: 4vw;
+}
+
+.arrowshor{
+  height: 4vw;
+}
+
+.footer{
+  height: 9vw;
 }
 }
